--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Kalima - Multilingual Learning Platform</title>
-    <meta name="description" content="Kalima is an educational platform offering articles in multiple languages including English, Arabic, French, Spanish and German." />
+    <title>Kalima online - Multilingual Learning Platform</title>
+    <meta name="description" content="Kalima online is an educational platform offering articles in multiple languages including English, Arabic, French, Spanish and German." />
   </head>
   <body>
     <div id="root"></div>
